- Correct problem a line shift - Correct term

--- a/sources/css/timesheet.css
+++ b/sources/css/timesheet.css
@@ -87,7 +87,8 @@
 .timesheet .line section{
 	position:relative;
 	top:2px;
-	height:100%;	
+	height:100%;
+	width:1%;
 }
 
 .timesheet .line section:after{
